# SnakeGB

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCH_REVIEW.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  GBButton.qml  LICENSE  Makefile  POLISH.md  README.md  README_zh-CN.md  README_zh.md  TODO.md  docker-compose.yml  game_logic.cpp  game_logic.h  justfile  main.qml
android/: AndroidManifest.xml
build-android-local-qt-toolchains/: .ninja_deps  .ninja_log  CMakeCache.txt  SnakeGB  android-SnakeGB-deployment-settings.json  build.ninja  cmake_install.cmake
build-android-local-qt-toolchains-hostusr/: CMakeCache.txt
cmake/: resources.cmake
docs/: ARCHITECTURE_REFACTOR_PLAN.md  AUDIO_AUTHORING.md  AUDIO_SYSTEM_PLAN.md  BOT_ML_VALIDATION.md  BOT_RULES.md  BOT_TRAINING.md  COVERAGE_BASELINE.json  INPUT_SEMANTICS.md  (+8 more)
src/: CMakeLists.txt  app_state.h  game_engine_interface.h  game_logic.cpp  game_logic.h  game_logic_board.cpp  game_logic_choices.cpp  game_logic_consumption.cpp  game_logic_input.cpp  game_logic_levels.cpp  game_logic_lifecycle.cpp  game_logic_persistence.cpp  game_logic_runtime.cpp  game_logic_session.cpp  game_logic_simulation.cpp  game_logic_view.cpp  input_injection_pipe.cpp  input_injection_pipe.h  main.cpp  power_up_id.h  profile_manager.cpp  profile_manager.h  sound_manager.cpp  sound_manager.h
src/adapter/: achievement_runtime.cpp  achievement_runtime.h  audio_settings_view_model.cpp  audio_settings_view_model.h  board_state.cpp  choice_models.cpp  choice_models.h  choices.cpp  consumption.cpp  engine.cpp  engine.h  engine_adapter.cpp  engine_adapter.h  game_logic.h  ghost_store.cpp  ghost_store.h  input_router.cpp  input_semantics.cpp  level_applier.cpp  level_applier.h  level_flow.cpp  level_loader.cpp  level_loader.h  level_script_runtime.cpp  level_script_runtime.h  library_models.cpp  lifecycle.cpp  persistence.cpp  profile_bridge.cpp  profile_bridge.h  selection_view_model.cpp  selection_view_model.h  session_state.cpp  session_state.h  session_state_runtime.cpp  session_status_view_model.cpp  simulation.cpp  theme_view_model.cpp  tick.cpp  tick_driver.cpp  (+3 more)
src/adapter/achievement/: runtime.cpp  runtime.h
src/adapter/bot/: backend.cpp  backend.h  config.cpp  config.h  config_loader.cpp  controller.cpp  controller.h  facade.cpp  features.cpp  features.h  ml_backend.cpp  ml_backend.h  runtime.cpp  runtime.h  runtime_facade.cpp  state.cpp  state.h
src/adapter/ghost/: store.cpp  store.h
src/adapter/haptics/: controller.cpp  controller.h
src/adapter/input/: router.cpp  semantics.cpp  semantics.h
src/adapter/level/: applier.cpp  applier.h  flow.cpp  loader.cpp  loader.h  script_runtime.cpp  script_runtime.h
src/adapter/models/: choice.cpp  choice.h  library.cpp  library.h
src/adapter/profile/: bridge.cpp  bridge.h
src/adapter/session/: runtime.cpp  state.cpp  state.h
src/adapter/ui/: action.cpp  action.h  controller.cpp  controller.h
src/adapter/view_models/: audio.cpp  audio.h  render.cpp  render.h  selection.cpp  selection.h  status.cpp  status.h  theme.cpp  theme.h
src/audio/: cue.h  event.h  score.cpp  score.h  score_catalog.json
src/core/: achievement_rules.cpp  achievement_rules.h  buff_runtime.cpp  buff_runtime.h  choice_runtime.cpp  choice_runtime.h  game_rules.cpp  game_rules.h  level_runtime.cpp  level_runtime.h  replay_timeline.cpp  replay_timeline.h  replay_types.h  session_core.cpp  session_core.h  session_runner.cpp  session_runner.h  session_runtime.cpp  session_runtime.h  session_step.cpp  session_step.h  session_step_types.h  state_snapshot.h
src/core/achievement/: rules.cpp  rules.h
src/core/buff/: runtime.cpp  runtime.h
src/core/choice/: runtime.cpp  runtime.h
src/core/game/: rules.cpp  rules.h
src/core/level/: runtime.cpp  runtime.h
src/core/replay/: timeline.cpp  timeline.h  types.h
src/core/session/: core.cpp  core.h  runner.cpp  runner.h  runtime.cpp  runtime.h  snapshot.h  state.h  step_types.h
src/fsm/: game_state.h  replay_timeline.cpp  replay_timeline.h  session_step.cpp  session_step.h  state_factory.cpp  state_factory.h  states.cpp  states.h
src/levels/: levels.json
src/logging/: categories.cpp  categories.h  mode.h  policy.cpp  policy.h  runtime_logger.cpp  runtime_logger.h
src/qml/: BuffStatusPanel.qml  DPad.qml  DebugTokenRouter.qml  GBButton.qml  GameBoyShell.qml  GameScreen.qml  GameScreenHud.qml  GameScreenIconLab.qml  GameScreenLibrary.qml  GameScreenMenu.qml  GameScreenOverlays.qml  GameScreenStaticDebug.qml  GameScreenWorld.qml  HudLayer.qml  IconLabLayer.qml  InputPressController.qml  LayerScale.js  LevelUpModal.qml  LibraryLayer.qml  MedalRoom.qml  MedalRoomCard.qml  MenuLayer.qml  ModalChoiceCard.qml  ModalSurface.qml  ModalTextPanel.qml  OSDLayer.qml  OverlayLayer.qml  PowerMeta.js  ReadabilityRules.js  ReplayBanner.qml  ScreenBezel.qml  ScreenThemeTokens.js  ScreenView.qml  Shell.qml  ShellBranding.qml  ShellBridge.qml  ShellSurface.qml  SmallButton.qml  SpeakerGrill.qml  SplashLayer.qml  (+14 more)
src/qml/components/: ListCardFrame.qml  SectionHeader.qml  StatusPill.qml
src/qml/debug/: DebugBindings.js  DebugStateFactory.js  DebugTokenParser.js
src/qml/icons/: AchievementBadgeIcon.qml  AchievementGlyph.qml  AchievementPainter.js  FoodGlyph.qml  FoodIcon.qml  FoodPainter.js  IconFrame.qml  PowerGlyph.qml  PowerIcon.qml  PowerPainter.js  qmldir
src/qml/meta/: AchievementMeta.js  CatalogMeta.js  PowerMeta.js
src/qml/theme/: Accents.js  Palette.js  ScreenThemes.js
src/runtime/: board_state.cpp  choices.cpp  consumption.cpp  engine_adapter.cpp  input_router.cpp  level_flow.cpp  lifecycle.cpp  persistence.cpp  session_state.cpp  simulation.cpp  tick_driver.cpp  view_model.cpp
src/services/: audio_bus.cpp  level_repository.cpp  level_repository.h  save_repository.cpp  save_repository.h
src/services/audio/: bus.cpp  bus.h
src/services/level/: repository.cpp  repository.h
src/services/save/: repository.cpp  repository.h
src/themes/: theme_catalog.json
src/tools/: bot_benchmark.cpp
(+163 files in other folders)
